<resources>
    <string name="app_name">GitHub Chat App</string>
    <string name="activity_login_text_button_login_old">Login with Github</string>
    <string name="title_activity_main">Github Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_chat_room">Create Chat Room</string>
    <string name="confirm_create_content_description">Confirm Create Chat</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="view_profile">View Github Profile</string>
    <string name="share">Share</string>
    <string name="scroll_down">Scroll Down</string>
    <string name="enter_repo_empty">Enter Repo:</string>
    <string name="login_author">Created for SER-210 by Thomas Kwashnak</string>
    <string name="login_button_sign_in">Sign in with Github</string>
    <string name="info">Info</string>
    <string name="github">Github</string>
    <string name="about">About</string>
    <string name="leave_chat">Leave Chat Room</string>
    <string name="version">v0.3.0</string>
    <string name="view_on_github">View on Github</string>
    <string name="app_authors">Written by Thomas Kwashnak</string>
    <string name="app_info_creation">Created for the SER-210 Final Project</string>
    <string name="open_website">Open Website</string>
    <string name="filter_view_app_githubapp">filter_view_app_githubapp</string>
    <!--    &lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <!--    <string name="login_github">Login with Github</string>-->
    <!--    <string name="preference_file">GithubChatAppPreferences</string>-->
    <!--    <string name="create_fragment">Create Fragment</string>-->
    <!--    <string name="confirm_create_chat">Confirm Create</string>-->
    <!--    <string name="title_activity_main">MainActivity</string>-->
    <!--    &lt;!&ndash; Strings used for fragments for navigation &ndash;&gt;-->
    <!--    <string name="first_fragment_label">First Fragment</string>-->
    <!--    <string name="second_fragment_label">Second Fragment</string>-->
    <!--    <string name="next">Next</string>-->
    <!--    <string name="previous">Previous</string>-->

    <!--    <string name="hello_first_fragment">Hello first fragment</string>-->
    <!--    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->

</resources>